Fixed overlap buttons and view

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -60,11 +60,11 @@
     display: none;
 }
 
-#timeTotal {
+.timeTotal {
     display: none;
 }
 
-#timer {
+.timer {
     display: none;
 }
 
